--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
                 <img src="../static/images/logo2.png" class="logo">
                 <nav>
                     <ul class="alink">
-                        <li> <a href="home.html"> Home </a></li>
+                        <li> <a href="/"> Home </a></li>
                         <li> <a href="https://www.youtube.com/channel/UCbpIb7eGuCVFPfX6U-6z1Og"> Music </a></li>
                         <li> <a href="https://github.com/aakriti1318"> LinkedIn </a></li>
                         <li> <a href="https://www.linkedin.com/in/aakritiaggarwal13/"> Github </a></li>
