--- a/templates/home.html
+++ b/templates/home.html
@@ -13,8 +13,8 @@
                     <ul class="alink">
                         <li> <a href="/"> Home </a></li>
                         <li> <a href="https://www.youtube.com/channel/UCbpIb7eGuCVFPfX6U-6z1Og"> Music </a></li>
-                        <li> <a href="https://github.com/aakriti1318"> LinkedIn </a></li>
-                        <li> <a href="https://www.linkedin.com/in/aakritiaggarwal13/"> Github </a></li>
+                        <li> <a href="https://www.linkedin.com/in/aakritiaggarwal13/"> LinkedIn </a></li>
+                        <li> <a href="https://github.com/aakriti1318"> Github </a></li>
                     </ul>
                 </nav>
                 <img src="../static/images/menu.png" class="menu">
